# k8s-upgrade-skills

./: .gitignore  .mcp.json  CLAUDE.md  QnA.md  README.md  eks1.33>1.34-히스토리2.md  history-1.34->1.35.md  history-v0.0.1-1.34->1.35.md  install.sh  k8s-upgrade-skills-presentation-2.html  k8s-upgrade-skills-presentation-swiss.html  k8s-upgrade-skills-presentation.html  pyproject.toml  recipe.example.yaml  recipe.md
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: docker-build-push.yml
.hypothesis/constants/: 2c5f51667398326f  7d9ab1e186228c69  dc44ffa95910ef98  ff225fa4f4594f28
apps/event-hub/: Dockerfile  index.js  package.json
apps/mongo-crud/: Dockerfile  main.py  requirements.txt
apps/pg-crud/: Dockerfile  go.mod  go.sum  main.go
charts/: README.md
charts/upgrade-test-app/: Chart.yaml  values.yaml  values_event_hub.yaml  values_ezl_log_generator.yaml  values_mission_dns_fail.yaml  values_mission_oom.yaml  values_mission_slow_query.yaml  values_mission_wrong_creds.yaml  values_mongo_crud.yaml  values_pdb.yaml  values_pv.yaml  (+1 more)
docs/: ETCD 업그레이드 다운타임 최소화 방안.md  failure-runbook.md  required-permissions.md
history/: eks-1.33-1.34-history.md
k8s-upgrade-skills/: SKILL.md
scripts/: gate_check.py  validate_recipe.py
terraform-example/: argocd.tf  data.tf  databases.tf  eks.tf  ingress-nginx.tf  kube-app.tf  local.tf  logging.tf  middleware.tf  milvus.tf  network.tf  providers.tf  security.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
tests/: test_audit_event.py  test_gate_check.py  test_phase_gate.py  test_validate_recipe.py
(+73 files in other folders)
