[project]
name = "k8s-upgrade-skills"
version = "1.0.0"
description = "AI Agent를 위한 Kubernetes 업그레이드 자동화 Skill"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "hypothesis>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
